--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,6 +26,7 @@
     owner: root
     group: root
     mode: 0644
+    setype: nrpe_etc_t
   notify: restart nagios-nrpe-server
 
 # Sync our plugins
